examples/test/testpolicy6471.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6471
  namespace: namespace455
spec:
  podSelector:
    matchLabels:
      key9: value14
      key5: value24
      key6: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value25
          key33: value43
          key0: value3
      podSelector:
        matchLabels:
          key43: value45
          key48: value44
          key16: value47
